--- a/configs/tat-llff-room-v2.yaml
+++ b/configs/tat-llff-room-v2.yaml
@@ -1,25 +1,25 @@
-name: 'tat-barn'
+name: 'tat-llff-room-v2'
 notes: '
-  [Data] Barn
+  [Data] LLFF Room
   [Model] 1000 planes
   [init] dense points (w/o box)
   [Loss] mse_color + mse_point2plane + area_reg.
   [Reg.] oscillate NDC
 '
 seed: 0
-cuda: '5'
+cuda: '6'
 data:
-  path: 'data/TanksAndTemple/Barn'
-  image_size: [1080, 1920]
+  path: 'data/TanksAndTemple/llff_room'
+  image_size: [1800, 2400]
   sample_rate: 0.2
   batch_points: 10000
   white_bg: True
 checkpoint:
-  teacher: 'tat-barn-teacher.pth'
-  experts: 'tat-barn-experts.pth'
+  teacher: 'tat-llff_room-teacher-v2.pth'
+  experts: 'tat-llff_room-experts-v2.pth'
 
 model:
-  n_plane:1000
+  n_plane: 1000
   n_train_sample: 10000
   n_infer_sample: 10000
   anti_aliasing: True
@@ -60,10 +60,10 @@ train:
   resume: True
   freeze_geometry: True
   epoch:
-    teacher: 2800
-    distill: 1000
-    finetune: 3500
-    validation: 500
+    teacher: 10 # 2800
+    distill: 500 # 1000
+    finetune: 1750 # 3500
+    validation: 250 # 500
     checkpoint: 10
 test:
   mode: 'render' # 'test_model'
