--- a/configs/tat-lab_01.yaml
+++ b/configs/tat-lab_01.yaml
@@ -1,22 +1,22 @@
-name: 'tat-llff-room'
+name: 'tat-lab_01'
 notes: '
-  [Data] LLFF Room
+  [Data] Lab 01 (Custom data)
   [Model] 1000 planes
   [init] dense points (w/o box)
   [Loss] mse_color + mse_point2plane + area_reg.
   [Reg.] oscillate NDC
 '
 seed: 0
-cuda: '6'
+cuda: '0'
 data:
-  path: 'data/TanksAndTemple/llff_room'
-  image_size: [1800, 2400]
+  path: 'data/TanksAndTemple/lab_01'
+  image_size: [378, 504] # [3024, 4032]
   sample_rate: 0.2
   batch_points: 10000
   white_bg: True
 checkpoint:
-  teacher: 'tat-llff_room-teacher.pth'
-  experts: 'tat-llff_room-experts.pth'
+  teacher: 'tat-lab_01-teacher.pth'
+  experts: 'tat-lab_01-experts.pth'
 
 model:
   n_plane: 1000
@@ -60,13 +60,13 @@ train:
   resume: True
   freeze_geometry: True
   epoch:
-    teacher: 1500 # 2800
+    teacher: 2800
     distill: 1000
     finetune: 3500
-    validation: 500
+    validation: 200 # 500
     checkpoint: 10
 test:
-  mode: 'render' # 'test_model'
+  mode: 'test_model'
   folder: ''
   vis:
     id: ''
